added some tables and forms templates
