# storage/api-docs/api-docs.json
@@ -71,6 +71,32 @@
                 ]
             }
         },
+        "/chatbot": {
+            "get": {
+                "tags": [
+                    "chatbot"
+                ],
+                "summary": "Get records information",
+                "description": "Returns records data",
+                "operationId": "gel all records",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key_security_example": []
+                    }
+                ]
+            }
+        },
         "/projects": {
             "get": {
                 "responses": {
